modify hero section and fix project section overflow bug

--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -9,7 +9,7 @@
     backdrop-filter: blur(8px);
     border-radius: 25px 25px 0 0;
     padding-top: 50px;
-    border: 1px solid white;
+    border-top: 1px solid var(--border-color);
 }
 
 .gridContainer {
